# metamodule-ctrlcc

./: CMakeLists.txt  README.md  ctrlcc-patch-builder.html  plugin-mm.json  plugin.json
.github/workflows/: build.yml
doc/: index.html
src/: CtrlCC.cpp  RytmCC.cpp  plugin.cpp  plugin.hpp
